# AlgosupFSharp2023

./: .gitignore
Exercises/: ExercisesDay1.fs  ExercisesDay1Additional.fs  ExercisesDay2.fs  ExercisesDay2_1QueenAttack.fs  ExercisesDay2_2SpaceAge.fs  ExercisesDay2_3Clock.fs  ExercisesDay2_4RobotSimulator.fs  ExercisesDay2_5Allergies.fs  ExercisesDay2_6Hamming.fs  ExercisesDay2_7Primes.fs  ExercisesDay2_8Minesweeper.fs  ExercisesDay3_1ArmstrongNumbers.fs  ExercisesDay3_2Darts.fs  ExercisesDay3_3ProteinTranslation.fs  ExercisesDay3_4BinarySearch.fs  ExercisesDay3_5FoodChain.fs  ExercisesDay3_6PascalsTriangle.fs  ExercisesDay3_7Ledger.fs  ExercisesDay3_8AtbashCipher.fs  FSharpExcercises.fsproj  Question01.fs  Question02.fs  Question03.fs  Question04.fs  Question05.fs  Question06.fs  Question07.fs  Question08.fs  Question09.fs  Question10.fs  scratchExam.fsx
Unit1.2/: examples.fsx
Unit4.2/NativeInteropSharedLib/: build.fsx
Unit4.2/NativeInteropSharedLib/CSharedLibrary/: CMakeLists.txt
Unit4.2/NativeInteropSharedLib/FsProgram/: Program.fs
Unit4.2/NativeInteropSimpleExample/: Program.fs
Unit6.2/CSharedLibrary/: CMakeLists.txt
Unit6.2/CSharedLibrary/include/shared/: Hello.h
Unit6.2/CSharedLibrary/src/: Hello.cpp
Unit6.2/FsProgram/: Program.fs
Unit7.1/Minesweeper/Minesweeper.Gtk/: Minesweeper.Gtk.fsproj  Program.fs
Unit7.2/AsyncDemo/: AsyncDemo.fsproj  Program.fs
Unit8/FsProgram/: Program.fs
pacman/: README.md  newScratch.fsx  package-lock.json  scratch.fsx  webpack.config.js
pacman/public/: index.html
pacman/src/: pacman.fs  pacman.fsproj
(+11 files in other folders)
